Initial commit with Angular project

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,15 +2,29 @@
     <div class="div1">
         <div class="homeicon">
             <a href="/Home">
-                <img src="../../assets/Home_icon.png" alt="Logo" title="linkedin" />
+                <img src="../../assets/Home_icon.png" alt="Logo" title="Home" />
             </a>
         </div>
     </div>
     <div class="div2">
-        <button mat-button class="primary" (click)="nevigate('Home')">Home</button>
-        <button mat-button class="primary" (click)="nevigate('About')">About</button>
-        <button mat-button class="primary" (click)="nevigate('Portfolio')">Portfolio</button>
-        <button mat-button class="primary" (click)="nevigate('Pages')">Pages</button>
-        <button mat-button class="primary" (click)="nevigate('Blog')">Blog</button>
-        <button mat-button class="primary" (click)="nevigate('Contact')">Contact</button>
+        <button mat-button class="primary" title="Home" (click)="nevigate('Home')">Home</button>
     </div>
+    <div class="div3">
+        <button mat-button class="primary" title="About" (click)="nevigate('About')">About</button>
+    </div>
+    <div class="div4">
+        <button mat-button class="primary" title="Skill's & Ablilities" (click)="nevigate('Skills')">Skill's</button>
+    </div>
+    <div class="div5">
+        <button mat-button class="primary" title="Education" (click)="nevigate('Education')">Education</button>
+    </div>
+    <div class="div6">
+        <button mat-button class="primary" title="Work Experience" (click)="nevigate('Experience')">Experience</button>
+    </div>
+    <div class="div7">
+        <button mat-button class="primary" title="Working Expertise" (click)="nevigate('Page')">Expertis</button>
+    </div>
+    <div class="div8">
+        <button mat-button class="primary" title="Contact Details" (click)="nevigate('Contact')">Contact</button>
+    </div>
+</div>
