--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,9 +1,11 @@
-.container{
+.container {
     background-color: #f9f9ff;
+    margin-top: 80px;
 }
+
 .parent {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
@@ -11,38 +13,126 @@
 }
 
 .div1 {
-    grid-area: 1 / 1 / 2 / 2;
+    grid-area: 1 / 1 / 2 / 3;
     width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .div2 {
-    grid-area: 1 / 2 / 2 / 4;
+    grid-area: 1 / 3 / 2 / 6;
     padding: 100px;
-    .header {
-        font-family: "Poppins", sans-serif;
-        font-size: 48px;
-        color: #222222;
-        font-weight: 700;
-        width: 75%;
-    }
-
-
 }
 
-.circie{
+.header {
+    font-family: "Poppins", sans-serif;
+    font-size: 48px;
+    color: #222222;
+    font-weight: 700;
+    width: 75%;
+}
+
+.circie {
     border-radius: 20px;
     width: 10px;
     height: 10px;
     background-color: red;
 }
 
-.hrline{
+.hrline {
     color: red;
     background: red;
     border: 1px;
     height: 2px;
 }
-p{
+
+p {
     font-family: "Poppins", sans-serif;
     opacity: 65%;
+    line-height: 1.6;
+    font-size: 16px;
+}
+
+img {
+    height: 350px;
+    border-radius: 20px;
+    margin-left: 80%;
+    margin-top: -10%;
+}
+
+@media (max-width: 768px) {
+    .parent {
+        grid-template-columns: 1fr; 
+        grid-template-rows: auto;
+        padding: 20px;
+    }
+
+    .div1 {
+        grid-area: 1 / 1 / 2 / 2;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    }
+
+    .div2 {
+        grid-area: 2 / 1 / 3 / 2;
+        padding: 20px;
+    }
+
+    .header {
+        font-size: 32px; 
+        text-align: center;
+    }
+
+    p {
+        font-size: 14px;
+    }
+
+    img {
+        height: 250px; 
+        margin-left: 0;
+        margin-top: 20px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .parent {
+        grid-template-columns: 1fr; 
+        grid-template-rows: auto;
+        padding: 10px;
+    }
+
+    .div1 {
+        grid-area: 1 / 1 / 2 / 2;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .div2 {
+        grid-area: 2 / 1 / 3 / 2;
+        padding: 10px;
+    }
+
+    .header {
+        font-size: 24px; 
+        text-align: center;
+    }
+
+    p {
+        font-size: 12px; 
+    }
+
+    img {
+        height: 200px; 
+        width: 100%;
+        margin-left: 0;
+        margin-top: 10px;
+    }
 }
