--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,33 +1,16 @@
+
 .parent {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     background: #ffd200;
 }
 
-.div1 {
-    grid-area: 1 / 1 / 2 / 2;
-    font-size: 21px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Poppins", sans-serif;
-    font-weight: 700;
-
-    .homeicon {
-        a {
-            img {
-                height: 50px;
-            }
-        }
-    }
-}
-
 .div2 {
-    grid-area: 2 / 1 / 3 / 2;
+    grid-area: 1 / 1 / 2 / 2;
     font-size: 21px;
     display: flex;
     justify-content: center;
@@ -37,21 +20,35 @@
 }
 
 .div3 {
-    grid-area: 3 / 1 / 4 / 2;
+    grid-area: 2 / 1 / 3 / 2;
     width: 40%;
     display: flex;
     justify-content: center;
     margin: auto;
+}
 
-    .logodiv {
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-    }
+.logodiv {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.logodiv a {
+    display: inline-block;
+}
+
+.logodiv img {
+    height: 40px;
+    margin: 0 10px;
+    transition: transform 0.3s ease;
+}
+
+.logodiv img:hover {
+    transform: scale(1.1); 
 }
 
 .div4 {
-    grid-area: 4 / 1 / 5 / 2;
+    grid-area: 3 / 1 / 4 / 2;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -60,7 +57,7 @@
     text-align: center;
 }
 
-.name{
+.name {
     color: #e45447;
     cursor: pointer;
 }
