--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
     <div class="parent">
         <div class="div1">
             <div class="homeicon">
-                <img src="../../assets/about_img.png" alt="Logo" />
+                <img src="../../assets/About_img.png" alt="Logo" />
             </div>
         </div>
         <div class="div2">
