--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -60,6 +60,7 @@ label {
     font-size: 14px;
     color: #333;
     margin-bottom: 5px;
+    text-align: justify;
 }
 
 input[type="text"], textarea {
