--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,4 @@
 <div class="parent">
-
     <div class="div2">Follow Me</div>
     <div class="div3">
         <div class="logodiv">
@@ -18,6 +17,6 @@
         </div>
     </div>
     <div class="div4">
-        Copyright ©2025 All rights reserved | This template is made with ❤ by &nbsp; <a href="/Home" class="name">Harshad Wagh</a> 
+        Copyright ©2025 All rights reserved | This template is made with ❤ by &nbsp; <a class="name">Harshad Wagh</a>
     </div>
 </div>
