--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -13,12 +13,12 @@
             </span>
             <br>
             <p> Dedicated front-end Angular developer with 3+ years of experience in designing, developing and
-                maintaining web applications with Angular 17+ & Angular Material UI libraries. Expert in Angular and Agile lifecycle
-                with a proven record of delivering robust web applications.
+                maintaining web applications with Angular 17+ & Angular Material UI libraries. Expert in Angular and
+                Agile lifecycle with a proven record of delivering robust web applications.
             </p>
             <p>
-                Excited to apply advanced technical skills and extensive knowledge in web
-                services to contribute effectively to mission-critical programs.
+                Excited to apply advanced technical skills and extensive knowledge in web services to contribute
+                effectively to mission-critical programs.
             </p>
             <p>
                 To advance my career with a globally-oriented company that fosters creativity, providing opportunities
