--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,7 +7,7 @@
     grid-row-gap: 0px;
     width: 80%;
     margin: auto;
-    padding: 50px;
+   margin-bottom: 25px;
 }
 
 .deatilswrpmain {
@@ -33,7 +33,7 @@
     border: 1px solid #ddd;
     border-radius: 10px;
     text-align: center;
-    padding: 30px;
+    // padding: 30px;
     width: 100%;
 }
 
@@ -51,8 +51,8 @@ form {
 .component {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    margin: 10px 0;
+    width: 80%;
+    margin-left: 50px;
 }
 
 label {
@@ -86,7 +86,7 @@ textarea {
 .deatilswrp {
     display: flex;
     justify-content: flex-start;
-    padding: 20px;
+    // padding: 20px;
     align-items: center;
 }
 
@@ -106,6 +106,7 @@ textarea {
 }
 
 .primarywrp {
+    width: 90%;
     display: flex;
     justify-content: flex-end;
 }
@@ -116,10 +117,11 @@ textarea {
     background: #7a3adc;
     color: white;
     border-radius: 18px;
-    cursor: pointer;
+    cursor: pointer !important;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
+    border: 1px solid;
 }
 
 .primary:disabled {
@@ -134,10 +136,16 @@ textarea {
 
 @media (max-width: 768px) {
     .parent {
-        width: 90%;
-        padding: 20px;
+        width: 100%;
+        height: 1050px;
+        // margin-bottom: 200px;
     }
 
+    .div3 {
+        width: 90%;
+        margin: auto;
+        border: none;
+    }
     .div1 {
         text-align: left;
     }
@@ -145,13 +153,12 @@ textarea {
     .deatilswrpmain {
         flex-direction: column;
         align-items: center;
-        padding: 0;
+        // padding: 0;
     }
 
     .deatilswrp {
         flex-direction: column;
         align-items: center;
-        padding: 10px;
     }
 
     .subdiv1, .subdiv2 {
@@ -165,7 +172,14 @@ textarea {
 
 @media (max-width: 480px) {
     .div3 {
-        padding: 15px;
+        width: 90%;
+        margin: auto;
+        border: none;
+    }
+    .parent {
+        width: 100%;
+        height: 1050px;
+        // margin-bottom: 200px;
     }
 
     .subdiv1, .subdiv2 {
@@ -174,6 +188,7 @@ textarea {
 
     .component {
         margin: 8px 0; 
+        margin-left: 35px;
     }
 
     .primary {
