--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -9,33 +9,33 @@
                 <div class="div1wrp">
                       <img class="Subimg" src="../../assets/BE_Collage.jpg">
                 </div>
-                <div>
-                    <div class="text1">Bachelor of Engineering ( B. E )</div>
+                <div style="margin-top: 20px;text-align: center;">
+                    <div class="text1">Bachelor of Engineering</div>
                     <div class="text2">Savitribai Phule Pune University, Pune | Electrical Engineering</div>
                     <div class="text4">Matoshri College Of Engineering & Research Centre, Eklahare, Nashik</div>
-                    <div class="text3">2018 - 2021 | CGPA 8.36 | Completed</div>
+                    <div class="text3">2018 - 2021 | 8.36 </div>
                 </div>
             </div>
             <div class="div2">
                 <div class="div1wrp">
                     <img class="Subimg" src="../../assets/Diploma_college.jpg">
               </div>
-              <div>
-                  <div class="text1">Diploma in Engineering ( Diploma )</div>
-                  <div class="text2">Maharashtra State Board of Technical Education, Mumbai | Electrical Engineering</div>
+              <div  style="margin-top: 20px;text-align: center;">
+                  <div class="text1">Diploma in Engineering</div>
+                  <div class="text2" style="padding: 10px;">Maharashtra State Board of Technical Education, Mumbai | Electrical Engineering</div>
                   <div class="text4">Matoshri Aasarabai Polytechnic, Eklahare, Nashik</div>
-                  <div class="text3">2015 - 2018 | CGPA 71.39% | Completed</div>
+                  <div class="text3">2015 - 2018 | 71.39%</div>
               </div>
             </div>
             <div class="div3">
                 <div class="div1wrp">
                     <img class="Subimg"  src="../../assets/school.avif">
               </div>
-              <div>
+              <div  style="margin-top: 20px;text-align: center;">
                   <div class="text1">SSC ( 10th )</div>
                   <div class="text2">Maharashtra State Board of Secondary & Higher Secondary Education, Pune </div>
                   <div class="text4">Madhyamik Vidhya Mandir Thermal Power Station, Eklahare, Nashik</div>
-                  <div class="text3">2014 - 2015 | CGPA 81.60 | Completed</div>
+                  <div class="text3">2014 - 2015 | 81.60%</div>
               </div>
             </div>
         </div>
