--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,17 +1,24 @@
+/* General Styles */
+body {
+    margin: 0;
+    padding: 0;
+}
 
 .parent {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     background: #ffd200;
+    padding: 20px 0;
 }
 
 .div2 {
     grid-area: 1 / 1 / 2 / 2;
-    font-size: 21px;
+    padding: 15px;
+    font-size: 22px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,16 +28,16 @@
 
 .div3 {
     grid-area: 2 / 1 / 3 / 2;
-    width: 40%;
     display: flex;
     justify-content: center;
     margin: auto;
 }
 
 .logodiv {
-    width: 100%;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .logodiv a {
@@ -38,26 +45,77 @@
 }
 
 .logodiv img {
-    height: 40px;
-    margin: 0 10px;
+    height: 60px;
     transition: transform 0.3s ease;
 }
 
 .logodiv img:hover {
-    transform: scale(1.1); 
+    transform: scale(1.1);
 }
 
 .div4 {
     grid-area: 3 / 1 / 4 / 2;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     font-family: "Poppins", sans-serif;
     text-align: center;
+    font-size: 14px;
 }
-
 .name {
     color: #e45447;
     cursor: pointer;
+}
+
+/* Responsive Styles */
+@media (max-width: 1200px) {
+    .logodiv img {
+        height: 35px;
+    }
+
+    .div2 {
+        font-size: 18px;
+    }
+
+    .div4 {
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 768px) {
+    .div3 {
+        width: 100%;
+    }
+
+    .logodiv {
+        justify-content: center;
+        width: 100%;
+    }
+
+    .div2 {
+        font-size: 20px;
+    }
+
+    .div4 {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 480px) {
+    .div3 {
+        width: 100%;
+    }
+
+    .logodiv {
+        justify-content: space-around;
+    }
+
+    .div2 {
+        font-size: 16px;
+    }
+
+    .div4 {
+        font-size: 12px;
+    }
+
+    .logodiv img {
+        height: 30px;
+    }
 }
