--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,3 @@
-
 .homeicon {
     display: flex;
     justify-content: start;
@@ -8,10 +7,10 @@
     height: 50px;
     margin-left: 65px;
     margin-top: 5px;
-    max-width: 100%; 
+    max-width: 100%;
 }
 
-.parent {
+.navbar {
     display: grid;
     background: #ffd200;
     grid-template-columns: repeat(12, 1fr);
@@ -19,55 +18,25 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     align-items: center;
-    position: fixed; 
-    top: 0; 
+    position: fixed;
+    top: 0;
     left: 0;
-    width: 100%; 
-    z-index: 1000; 
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
-    padding: 10px 0; 
+    width: 100%;
+    z-index: 1000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 10px 0;
+    justify-items: center;
 }
 
-.div1 {
-    grid-area: 1 / 1 / 2 / 6;
-}
-
-.div2, .div3, .div4, .div5, .div6, .div7, .div8 {
+.menu {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    grid-column: 2 / span 11;
+    width: 65%;
+    margin-right: -300px;
 }
 
-.div2 {
-    grid-area: 1 / 6 / 2 / 7;
-}
-
-.div3 {
-    grid-area: 1 / 7 / 2 / 8;
-}
-
-.div4 {
-    grid-area: 1 / 8 / 2 / 9;
-}
-
-.div5 {
-    grid-area: 1 / 9 / 2 / 10;
-    width: 92%;
-}
-
-.div6 {
-    grid-area: 1 / 10 / 2 / 11;
-}
-
-.div7 {
-    grid-area: 1 / 11 / 2 / 12;
-}
-
-.div8 {
-    grid-area: 1 / 12 / 2 / 13;
-}
-
-.primary {
+.menu button {
     font-family: "Poppins", sans-serif;
     font-size: 16px;
     border: 1px solid #ddd;
@@ -75,61 +44,90 @@
     padding: 8px 16px;
 }
 
-@media (max-width: 768px) {
-    .parent {
-        grid-template-columns: repeat(6, 1fr); 
-        grid-template-rows: auto auto;
-        padding: 5px 0; 
-    }
-
-    .div1 {
-        grid-area: 1 / 1 / 2 / 2;
-        justify-content: center;
-    }
-
-    .div2, .div3, .div4, .div5, .div6, .div7, .div8 {
-        grid-area: auto;
-        justify-content: center;
-        width: 100%; 
-        margin: 5px 0; 
-    }
-
-    .homeicon a img {
-        height: 40px;
-        margin-left: 20px;
-    }
-
-    .primary {
-        font-size: 14px; 
-        padding: 6px 12px;
-    }
+.dropdown-menu {
+    display: none;
 }
 
-@media (max-width: 480px) {
-    .parent {
-        grid-template-columns: 1fr; 
-        grid-template-rows: auto; 
+.dropdown-menu button {
+    font-size: 24px;
+}
+
+.dropdown-content {
+    display: grid;
+    position: absolute;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding: 10px;
+}
+
+.dropdown-menu button.primary {
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.dropdown-content button {
+    margin: 5px 0;
+}
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+
+    .dropdown-menu {
+        display: block; 
     }
 
-    .div1 {
-        grid-area: 1 / 1 / 2 / 2;
-        justify-content: center;
+    .dropdown-content {
+        display: flow-root;
+        margin-left: -71px;
+        width: 114px;
     }
 
-    .div2, .div3, .div4, .div5, .div6, .div7, .div8 {
-        grid-area: auto;
-        justify-content: center;
-        width: 100%;
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+    }
+    .primarymore {
+        font-size: 16px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        padding: 8px 16px;
+        margin-right: 25px;
+    }
+    .dropdown-content button.primary {
+        font-size: 16px;
+        padding: 8px 16px;
         margin: 5px 0;
     }
+    
+}
 
-    .homeicon a img {
-        height: 35px;
-        margin-left: 10px;
+@media screen and (max-width: 768px) {
+    .dropdown-menu {
+        display: block;
+    }
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+    }
+    .dropdown-menu button.primary.primarymore {
+        font-size: 16px;
+        border: 1px solid #ddd;
+        border-radius: 10px;
+        padding: 8px 16px;
+        margin-right: 25px;
+        display: block;
     }
 
-    .primary {
-        font-size: 12px;
-        padding: 5px 10px;
+    .dropdown-content {
+        display: block; 
+        margin-left: -71px;
+        width: 114px;
+        position: absolute;
+        background-color: #f1f1f1;
+        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        padding: 10px;
     }
 }
+
