--- a/src/app/workexperties/workexperties.component.html
+++ b/src/app/workexperties/workexperties.component.html
@@ -73,49 +73,19 @@
                 <button mat-button class="primary" style="border-radius: 20px;color:#222222;background: white;text-decoration: underline;border: 1px solid #f0f0f0;">Link</button>
                 <button mat-button class="primary" style="border-radius: 20px;color:#087dff;border: 1px solid transparent;cursor: not-allowed;" disabled>Disable</button>
             </div>
-            <div class="btnwrp">
-                <button mat-button class="primary" style="border-radius: 20px;color:#222222;border: 1px solid transparent;">Default &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#fff;background: #f8b600;border: 1px solid transparent;">Primary &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#fff;background: #4cd3e3;border: 1px solid transparent;">Success &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#fff;background: #38a4ff;border: 1px solid transparent;">Info &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#fff;background: #f4e700;border: 1px solid transparent;">Warning &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#fff;background: #f44a40;border: 1px solid transparent;">Danger &nbsp; &rarr;</button>
-            </div>
-            <div class="btnwrp">
-                <button mat-button class="primary" style="border-radius: 20px;color:#087dff;background: white;border: 1px solid #f0f0f0;">Default &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#f8b600;background: white;border: 1px solid #f8b600;">Primary &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#4cd3e3;background: white;border: 1px solid #4cd3e3;">Success &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#38a4ff;background: white;border: 1px solid #38a4ff;">Info &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#f4e700;background: white;border: 1px solid #f4e700;">Warning &nbsp; &rarr;</button>
-                <button mat-button class="primary" style="border-radius: 20px;color:#f44a40;background: white;border: 1px solid #f44a40;">Danger &nbsp; &rarr;</button>
-            </div>
-            <div class="btnwrp" style="display: flex;justify-content: space-evenly;align-items: anchor-center;">
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 50px;color:#fff;background: #f8b600;border: 1px solid transparent;">Extra Large</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 45px;color:#fff;background: #4cd3e3;border: 1px solid transparent;">Large</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 40px;color:#fff;background: #38a4ff;border: 1px solid transparent;">Default</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 30px;color:#fff;background: #f4e700;border: 1px solid transparent;">Medium</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 25px;color:#fff;background: #f44a40;border: 1px solid transparent;">Small</button>
-            </div>
-            <div class="btnwrp" style="display: flex;justify-content: space-evenly;align-items: anchor-center;">
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 50px;color:#f8b600;background: white;border: 1px solid #f8b600;">Extra Large</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 45px;color:#4cd3e3;background: white;border: 1px solid #4cd3e3;">Large</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 40px;color:#38a4ff;background: white;border: 1px solid #38a4ff;">Default</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 30px;color:#f4e700;background: white;border: 1px solid #f4e700;">Medium</button>
-                <button mat-button class="primary" style="display: flex;justify-content: center;align-items: center; height: 25px;color:#f44a40;background: white;border: 1px solid #f44a40;">Small</button>
-            </div>
         </section>
         <section  style="padding: 30px;">
             <h3> Left Aligned</h3>
             <div style="display: flex">
-                <div><img src="../../assets/left-right.jpg"></div>
-                <div><p style="width: 95%;text-align: left;margin-left: 25px;">Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino players found themselves being chased by the Federal government. But, after a fortnight, the online casino industry came up with a solution and new online casinos started taking root. These began to operate under a different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major part of this was enlisting electronic banking systems that would accept this new clarification and start doing business with me.</p></div>
+                <div><img class="leftmmm" src="../../assets/left-right.jpg"></div>
+                <div><p style="width: 95%;text-align: left;">Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino players found themselves being chased by the Federal government. But, after a fortnight, the online casino industry came up with a solution and new online casinos started taking root. These began to operate under a different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major part of this was enlisting electronic banking systems that would accept this new clarification and start doing business with me.</p></div>
             </div>
         </section>
         <section  style="padding: 30px;">
             <h3 style="text-align: right;"> Right Aligned</h3>
             <div  style="display: flex">
                 <div><p style="width: 95%;text-align: right;margin-right: 25px;">Recently, the US Federal government banned online casinos from operating in America by making it illegal to transfer money to them through any US bank or payment system. As a result of this law, most of the popular online casino networks such as Party Gaming and PlayTech left the United States. Overnight, online casino players found themselves being chased by the Federal government. But, after a fortnight, the online casino industry came up with a solution and new online casinos started taking root. These began to operate under a different business umbrella, and by doing that, rendered the transfer of money to and from them legal. A major part of this was enlisting electronic banking systems that would accept this new clarification and start doing business with me.</p></div>
-                <div><img src="../../assets/left-right.jpg"></div>
+                <div><img class="rightmmm" src="../../assets/left-right.jpg"></div>
             </div>
         </section>
         <section  style="padding: 30px;">
@@ -149,14 +119,12 @@
                   
                     <ng-container matColumnDef="weight">
                       <th mat-header-cell *matHeaderCellDef> Weight<br>
-                        <input type="text" placeholder="-- Search Weight--"  (input)="search2($event)">
                          </th>
                       <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
                     </ng-container>
                   
                     <ng-container matColumnDef="symbol">
                       <th mat-header-cell *matHeaderCellDef> Symbol<br>
-                        <input type="text" placeholder="-- Search Symbol--"  (input)="search3($event)">
                          </th>
                       <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
                     </ng-container>
@@ -179,7 +147,7 @@
             </div>
         </section>
         <section  style="padding: 30px;">
-            <div style="display: flex;justify-content: space-between;">
+            <div>
                 <div style="padding: 15px;">
                      <h3>Typography</h3>
                     <div class="typography">
@@ -266,7 +234,7 @@
                             <option value="America">America</option>
                         </select>
                         <textarea placeholder="Message" id="message" name="message" rows="5" required></textarea>
-                        <button mat-button class="primary" style="color:#fff;background: #4cd3e3;border: 1px solid transparent;">Success</button>
+                        <!-- <button mat-button class="primary" style="color:#fff;background: #4cd3e3;border: 1px solid transparent;">Success</button> -->
                     </form>
                 </div>
                 </div>
