--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -63,7 +63,9 @@
                         </div>
                     </div>
                     <div class="primarywrp">
-                        <button mat-button [disabled]="Contactform.invalid" class="primary"><img class="wpimg" src="../../assets/whatsapp.svg"><span>Send Message</span></button>
+                        <!-- <button mat-button [disabled]="Contactform.invalid" class="primary"><img class="wpimg" src="../../assets/whatsapp.svg"><span>Send Message</span></button> -->
+                        <button mat-button  [disabled]="Contactform.invalid" class="primary" style="margin-left: 10px;color:#fff;background: #4cd3e3;border: 1px solid transparent;"><img class="wpimg" src="../../assets/whatsapp.svg"><span>Send Message</span></button>
+
                     </div>
                 </div>
             </form>
