--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
             <div class="div1">
                 <div class="text1">Hi There,</div>
                 <div class="text2">I'm <span class="name">Harshad Wagh</span></div>
-                <div class="text3">I am into <span id="dynamic-text" style="color: rgb(255 123 0);">Angular development |</span></div>
+                <div class="text3">I am into <span id="dynamic-text" style="color: rgb(255 123 0);">Angular development</span></div>
                 <div class="primarywrp">
                     <button mat-button class="primary" (click)="download()" title="Download Resume">
                         <span>Download Resume</span>
