--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,7 +7,7 @@
     grid-row-gap: 0px;
     width: 80%;
     margin: auto;
-   margin-bottom: 25px;
+//    margin-bottom: 25px;
 }
 
 .deatilswrpmain {
@@ -81,6 +81,7 @@ textarea {
 .errortext {
     color: red;
     font-size: 14px;
+    text-align: justify;
 }
 
 .deatilswrp {
@@ -116,7 +117,7 @@ textarea {
     padding: 10px;
     background: #7a3adc;
     color: white;
-    border-radius: 18px;
+    // border-radius: 18px;
     cursor: pointer !important;
     display: flex;
     align-items: center;
@@ -125,7 +126,7 @@ textarea {
 }
 
 .primary:disabled {
-    opacity: 65%;
+    opacity: 50%;
     cursor: not-allowed;
 }
 
@@ -168,6 +169,7 @@ textarea {
     .primary {
         width: 150px;  
     }
+
 }
 
 @media (max-width: 480px) {
@@ -202,4 +204,11 @@ textarea {
     .subdata {
         font-size: 10px;
     }
+    
+}
+.div1{
+    margin-top: 15px;
+}
+.div3{
+    margin-bottom: 15px;
 }
