--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,8 @@
 .container {
-    background-image: url(../../assets/backgrund.jpg);
+    background-image: url("../../assets/backgrund.jpg");
     background-size: cover;
     background-position: center;
-    background-color: #f9f9ff;
+    background-color: #f9f9ff;  
     width: 100%;
     margin-top: 80px;
 }
@@ -58,7 +58,7 @@
     height: 350px;
     width: 350px;
     border-radius: 175px;
-    box-shadow: 0px 0px 50px #ddd;
+    box-shadow: 0px 0px 200px #fdf2bf;
 }
 
 .circleimg {
@@ -108,6 +108,7 @@
     padding: 17px;
     font-size: 30px;
     font-weight: 700;
+    line-height: 30px;
 }
 
 .text3 {
@@ -116,6 +117,7 @@
     padding: 17px;
     font-size: 25px;
     font-weight: 700;
+    line-height: 30px;
 }
 
 @media (max-width: 768px) {
@@ -178,3 +180,6 @@
         padding: 15px;
     }
 }
+
+
+
