--- a/src/app/skillsability/skillsability.component.html
+++ b/src/app/skillsability/skillsability.component.html
@@ -2,7 +2,7 @@
     <div class="parentwrp">
         <div class="titletag">
             <img class="mainimg" src="../../assets/skills.svg">
-            Skill's
+            Skill
         </div>
         <div class="parent">
             <div class="div1">
