updated resume and exp

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,9 +1,18 @@
 <body>
+        <div class="timeline">
+        <div class="container right">
+            <div class="content">
+                <div class="text1">Software Developer - Angular Frontend </div>
+                <div class="text2">29 July 2025 - present</div>
+                <div class="text4">Netxcell Ltd</div>
+            </div>
+        </div>
+    </div>
     <div class="timeline">
         <div class="container right">
             <div class="content">
-                <div class="text1">Frontend Developer - Angular</div>
-                <div class="text2">03 March 2022 - present                 </div>
+                <div class="text1">Frontend Developer - Angular Frontend</div>
+                <div class="text2">03 March 2022 - 25 July 2025</div>
                 <div class="text4">TATA Consultancy Services Pvt. Ltd Mumbai, Maharashtra, India</div>
             </div>
         </div>
