--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -16,7 +16,7 @@
     justify-content: flex-start;
     // margin-left: -1000px;
     padding-top: 100px;
-    padding-bottom: 100px;
+    // padding-bottom: 100px;
   }
   
   .timeline::after {
@@ -34,7 +34,7 @@
     padding: 10px 40px;
     position: relative;
     background-color: inherit;
-    width: 50%;
+    // width: 50%;
     
   }
 
