--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -4,7 +4,12 @@
             <div class="content">
                 <div class="text1">Software Developer - Angular Frontend </div>
                 <div class="text2">29 July 2025 - present</div>
-                <div class="text4">Netxcell Ltd</div>
+                <div class="text4">Netxcell Ltd <span style="color: #606060;font-size: 12px;">Mumbai, Maharashtra, India</span></div>
+                <ul>
+                    <li>Project: - Bharat Petroleum Corporation Ltd.
+                         &nbsp;
+                         <span style="color: #606060;font-size: 12px;"> Domain: - E-Commerce / Retails</span></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -13,7 +18,19 @@
             <div class="content">
                 <div class="text1">Frontend Developer - Angular Frontend</div>
                 <div class="text2">03 March 2022 - 25 July 2025</div>
-                <div class="text4">TATA Consultancy Services Pvt. Ltd Mumbai, Maharashtra, India</div>
+                <div class="text4">TATA Consultancy Services Pvt. Ltd <span style="color: #606060;font-size: 12px;">Thane, Maharashtra, India</span> </div>
+                <ul>
+                    <li>Project: - Incident Management Tool
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;
+                        <span style="color: #606060;font-size: 12px;"> Domain: - Security and Privacy</span>
+                       </li>
+                    <li>Project: - TATA Trent
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                         <span style="color: #606060;font-size: 12px;"> Domain: - E-Commerce / Retails</span></li>
+                </ul>
             </div>
         </div>
     </div>
